--- a/_includes/my-head.html
+++ b/_includes/my-head.html
@@ -41,3 +41,7 @@
     document.querySelectorAll('.gumroad-button').forEach(el => io2.observe(el));
   });
 </script>
+
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<script src="/assets/js/sidebar-folder.js"></script>
+
