sidebar test on GitHub Pages #1

--- a/_includes/my-head.html
+++ b/_includes/my-head.html
@@ -1,7 +1,7 @@
 <!-- Add HTML tags here to be included in the head. You can delete the below: -->
 <link rel="dns-prefetch" href="https://assets.gumroad.com">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<script src="/assets/js/sidebar-folder.js"></script>
+<script src="./assets/js/sidebar-folder.js"></script>
 
 
 <script type="module">
