--- a/_includes/my-head.html
+++ b/_includes/my-head.html
@@ -1,7 +1,7 @@
 <!-- Add HTML tags here to be included in the head. You can delete the below: -->
-<script src="./assets/js/sidebar-folder.js"></script>
 <link rel="dns-prefetch" href="https://assets.gumroad.com">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<script src="/assets/js/sidebar-folder.js"></script>
 
 <script type="module">
   const loadJS = x => new Promise(r => window.loadJS(x).addEventListener('load', r));
